--- a/comingsoon.html
+++ b/comingsoon.html
@@ -23,7 +23,7 @@
         <nav class = "nav_bar">
            <h4>
              <ul class="nav_list">
-               <li><a href="./project_tiles.html">Projects</a></li>
+               <li><a href="./index.html">Projects</a></li>
                <li><a href="./about.html">About</a></li>
              </ul>
            </h4>
@@ -33,7 +33,7 @@
         <h1> coming soon! </h1>
         <h4> I am currently working on the design & code behind presenting this project.
           <br>
-          It will be ready by September 9th :) 
+          It will be ready by September 9th :)
         </h4>
       </div>
     </div>
