--- a/POStagger.html
+++ b/POStagger.html
@@ -37,7 +37,7 @@
       <nav class = "nav_bar">
          <h4>
            <ul class="nav_list">
-             <li><a href="./project_tiles.html">Projects</a></li>
+             <li><a href="./index.html">Projects</a></li>
              <li><a href="./about.html">About</a></li>
            </ul>
          </h4>
