--- a/POStagger.html
+++ b/POStagger.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title> Project Home </title>
+  <title> Part-Of-Speech Tagger </title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:300,400,500" rel="stylesheet">
   <!-- ICONS -->
@@ -26,7 +26,7 @@
 <body>
   <div class="greyBorder"></div>
   <div class="project_name">
-    <h1> SPEECH.TAGGING </h1>
+    <h1> SPEECH.TAGGER </h1>
   </div>
   <div class="all_contents">
     <div id="header">
@@ -45,10 +45,10 @@
     </div>
     <div id="project_contents">
       <div class="project_intro">
-        <h5> GOAL: intelligently identifying the part-of-speech of words in sentence </h5>
-        <h5> SYNPOSIS: Individual project | Spring 2018 | Java </h5>
-        <h5> KEY SKILLS: Hidden Markov Models | Viterbi Algorithm | Parsing files, nested Maps, Graphs, Priority Qs </h5>
-        <h5> VALIDATION: 96.4% accuracy on the Brown corpus (35090/36,394 words correct) </h5>
+        <h5> <b>GOAL:</b> intelligently identifying the part-of-speech of words in sentence </h5>
+        <h5> <b>SYNPOSIS:</b> Individual project | Spring 2018 | Java </h5>
+        <h5> <b>KEY SKILLS:</b> Hidden Markov Models | Viterbi Algorithm | Parsing files, nested Maps, Graphs, Priority Qs </h5>
+        <h5> <b>VALIDATION:</b> 96.4% accuracy on the Brown corpus (35090/36,394 words correct) </h5>
       </div>
       <div id="project_test">
         <h5> Unfortunately, this program requires reading files with sizes beyond a web-browser’s capability.
@@ -60,10 +60,10 @@
         <h4> Key Process: </h4>
         <h5>
           <ol type="1">
-            <li> Given a testing corpus, sentences with the parts of speech already tagged. Parsed the testing corpus using a Map to compute the probability of (a) a word being a particular part of speech (b) parts-of-speeches it transitions to</li>
-            <li> Combined this information into a Graph creating a Hidden Markov model </li>
-            <li>  Implemented the Viterbi algorithm. In a sentence, for each word there are multiple options for parts-of-speeches to follow it. The Viterbi algorithm uses the information you give it to calculate which transition is most likely, thereby indicating what is the most likely sequence of parts-of-speeches. </li>
-            <li> Used Scanner to create a user interface that tags each word the user types. </li>
+            <li> Given a testing corpus, sentences with the parts of speech already tagged. <b>Parsed</b> the testing corpus using a <b>map</b> to compute the probability of (a) a word being a particular part of speech (b) parts-of-speeches it transitions to</li>
+            <li> Combined this information into a <b>graph</b> creating a <b>Hidden Markov model</b> </li>
+            <li> Implemented the <b>Viterbi algorithm</b>. In a sentence, for each word there are multiple options for parts-of-speeches to follow it. The Viterbi algorithm uses the information you give it to calculate which transition is most likely, thereby indicating what is the most likely sequence of parts-of-speeches. </li>
+            <li> Used <b>Scanner</b> to create a user interface that tags each word the user types. </li>
           </ol>
         </h5>
       </div>
