--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Catamaran:300,400,500" rel="stylesheet">
   <!-- ICONS -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -25,7 +26,7 @@
          <h4>
            <ul class="nav_list">
              <li><a href="./index.html">Projects</a></li>
-             <li><a href="./about.html">About</a></li>
+             <li><a class="current" href="./about.html">About</a></li>
            </ul>
          </h4>
       </nav>
