--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
           <div class="column">
             <div class="circle">
               <div class="front">
-                <a href="./space_time_simulator.html"> <img class="image" src="./icons/spacetime.png"> </a>
+                <a href="./comingsoon.html"> <img class="image" src="./icons/spacetime.png"> </a>
               </div>
               <div class="back">
-                <a href="./space_time_simulator.html"> <img class="image" src="./icons/blueback.png"> </a>
+                <a href="./comingsoon.html"> <img class="image" src="./icons/blueback.png"> </a>
               </div>
             </div>
           </div>
