--- a/comingsoon.html
+++ b/comingsoon.html
@@ -33,7 +33,7 @@
         <h1> coming soon! </h1>
         <h4> I am currently working on the design & code behind presenting this project.
           <br>
-          It will be ready by October :)
+          It will be ready soon! :)
         </h4>
       </div>
     </div>
